code/force-app/main/default/objects/Staging_Lead__c/Staging_Lead__c.object-meta.xml
<CustomObject>
    <description>行銷名單上傳用物件，在調整名單後會派發至商機 (Lead)</description>
    <label>名單上傳</label>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Staging Lead No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>