code/force-app/main/default/objects/Staging_Lead__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>地址</label>
    <type>Address</type>
</CustomField>