code/force-app/main/default/objects/Staging_Lead__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <label>指派Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VN_Team</valueSetName>
    </valueSet>
</CustomField>