code/force-app/main/default/objects/Staging_Lead__c/fields/Bond_Potential__c.field-meta.xml
<CustomField>
    <fullName>Bond_Potential__c</fullName>
    <label>債券潛力</label>
    <length>10</length>
    <type>Text</type>
</CustomField>