code/force-app/main/default/objects/Staging_Lead__c/fields/Bsn_Cbsm_P__c.field-meta.xml
<CustomField>
    <fullName>Bsn_Cbsm_P__c</fullName>
    <label>區部帳務號碼</label>
    <length>20</length>
    <type>Text</type>
</CustomField>