code/force-app/main/default/objects/Staging_Lead__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>公司</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>