code/force-app/main/default/objects/Staging_Lead__c/fields/Competitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Id__c</fullName>
    <label>交易對手統編</label>
    <length>20</length>
    <type>Text</type>
</CustomField>