code/force-app/main/default/objects/Staging_Lead__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>交易對手公司名稱</label>
    <length>200</length>
    <type>Text</type>
</CustomField>