code/force-app/main/default/objects/Staging_Lead__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>聯絡人姓名</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>