code/force-app/main/default/objects/Staging_Lead__c/fields/Credit_Card_VIP__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_VIP__c</fullName>
    <label>信用卡VIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>