code/force-app/main/default/objects/Staging_Lead__c/fields/Customer_Developing__c.field-meta.xml
<CustomField>
    <fullName>Customer_Developing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>客戶已被開發</label>
    <type>Checkbox</type>
</CustomField>