code/force-app/main/default/objects/Staging_Lead__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>客戶ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>