code/force-app/main/default/objects/Staging_Lead__c/fields/Customer_Mask_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mask_Id__c</fullName>
    <label>客戶統編隱碼</label>
    <length>50</length>
    <type>Text</type>
</CustomField>