code/force-app/main/default/objects/Staging_Lead__c/fields/Dist_User__c.field-meta.xml
<CustomField>
    <fullName>Dist_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>派發人員</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SL_Dist_User</relationshipName>
    <type>Lookup</type>
</CustomField>