code/force-app/main/default/objects/Staging_Lead__c/fields/Dist_User_Country__c.field-meta.xml
<CustomField>
    <fullName>Dist_User_Country__c</fullName>
    <formula>TEXT(Dist_User__r.Belong_Country__c)</formula>
    <label>派發人員所屬國家</label>
    <type>Text</type>
</CustomField>