code/force-app/main/default/objects/Staging_Lead__c/fields/Dist_User_Department__c.field-meta.xml
<CustomField>
    <fullName>Dist_User_Department__c</fullName>
    <formula>TEXT(Dist_User__r.Team__c)</formula>
    <label>派發人員所屬科別</label>
    <type>Text</type>
</CustomField>