code/force-app/main/default/objects/Staging_Lead__c/fields/Dist_User_Division__c.field-meta.xml
<CustomField>
    <fullName>Dist_User_Division__c</fullName>
    <formula>TEXT(Dist_User__r.Unit__c)</formula>
    <label>派發人員所屬區部</label>
    <type>Text</type>
</CustomField>