code/force-app/main/default/objects/Staging_Lead__c/fields/Dist_User_Emp_No__c.field-meta.xml
<CustomField>
    <fullName>Dist_User_Emp_No__c</fullName>
    <formula>Dist_User__r.Employee_No__c</formula>
    <label>派發人員員編</label>
    <type>Text</type>
</CustomField>