code/force-app/main/default/objects/Staging_Lead__c/fields/Dist_User_Segment__c.field-meta.xml
<CustomField>
    <fullName>Dist_User_Segment__c</fullName>
    <formula>TEXT(Dist_User__r.Customer_Segment__c)</formula>
    <label>派發人員所屬客群</label>
    <type>Text</type>
</CustomField>