code/force-app/main/default/objects/Staging_Lead__c/fields/Distribute_Bsn_District__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Bsn_District__c</fullName>
    <label>派發大地理區</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area</valueSetName>
    </valueSet>
</CustomField>