code/force-app/main/default/objects/Staging_Lead__c/fields/Distribute_Division__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Division__c</fullName>
    <label>派發區部</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Name</valueSetName>
    </valueSet>
</CustomField>