code/force-app/main/default/objects/Staging_Lead__c/fields/Distribute_No__c.field-meta.xml
<CustomField>
    <fullName>Distribute_No__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>派發筆數</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>