code/force-app/main/default/objects/Staging_Lead__c/fields/Distribute_Team_Cbsm__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Team_Cbsm__c</fullName>
    <label>派發科別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>