code/force-app/main/default/objects/Staging_Lead__c/fields/Distribution_Remark__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Remark__c</fullName>
    <label>派發註記</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>