code/force-app/main/default/objects/Staging_Lead__c/fields/Dp_M_Bsn__c.field-meta.xml
<CustomField>
    <fullName>Dp_M_Bsn__c</fullName>
    <label>最大存款行區部</label>
    <length>20</length>
    <type>Text</type>
</CustomField>