code/force-app/main/default/objects/Staging_Lead__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>電子郵件</label>
    <type>Email</type>
</CustomField>