code/force-app/main/default/objects/Staging_Lead__c/fields/Fm_Emp_Code__c.field-meta.xml
<CustomField>
    <fullName>Fm_Emp_Code__c</fullName>
    <label>經管理專員編</label>
    <length>20</length>
    <type>Text</type>
</CustomField>