code/force-app/main/default/objects/Staging_Lead__c/fields/Fm_Name__c.field-meta.xml
<CustomField>
    <fullName>Fm_Name__c</fullName>
    <label>經管理專姓名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>