code/force-app/main/default/objects/Staging_Lead__c/fields/High_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>High_Tax_Amount__c</fullName>
    <label>高繳稅額</label>
    <length>10</length>
    <type>Text</type>
</CustomField>