code/force-app/main/default/objects/Staging_Lead__c/fields/Invalid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Reason__c</fullName>
    <label>失效原因</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>重分配後剩餘</fullName>
            </value>
            <value>
                <fullName>名單到期</fullName>
            </value>
            <value>
                <fullName>重複排除</fullName>
            </value>
            <value>
                <fullName>派發失敗</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>