code/force-app/main/default/objects/Staging_Lead__c/fields/Investment_Potential__c.field-meta.xml
<CustomField>
    <fullName>Investment_Potential__c</fullName>
    <label>高投資理財潛力</label>
    <length>10</length>
    <type>Text</type>
</CustomField>