code/force-app/main/default/objects/Staging_Lead__c/fields/Key_Industry__c.field-meta.xml
<CustomField>
    <fullName>Key_Industry__c</fullName>
    <label>重點產業</label>
    <length>10</length>
    <type>Text</type>
</CustomField>