code/force-app/main/default/objects/Staging_Lead__c/fields/Lead_Expired__c.field-meta.xml
<CustomField>
    <fullName>Lead_Expired__c</fullName>
    <formula>Related_Campaign__r.Lead_Expired__c</formula>
    <label>名單實際已到期</label>
    <type>Checkbox</type>
</CustomField>