code/force-app/main/default/objects/Staging_Lead__c/fields/Lead_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Lead_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>名單失效</label>
    <type>Checkbox</type>
</CustomField>