code/force-app/main/default/objects/Staging_Lead__c/fields/Luxury_Residence__c.field-meta.xml
<CustomField>
    <fullName>Luxury_Residence__c</fullName>
    <label>持有高價住宅</label>
    <length>10</length>
    <type>Text</type>
</CustomField>