code/force-app/main/default/objects/Staging_Lead__c/fields/Manager_Division__c.field-meta.xml
<CustomField>
    <fullName>Manager_Division__c</fullName>
    <label>經管理專所屬區部</label>
    <length>20</length>
    <type>Text</type>
</CustomField>