code/force-app/main/default/objects/Staging_Lead__c/fields/Note3__c.field-meta.xml
<CustomField>
    <fullName>Note3__c</fullName>
    <label>備註3</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>