code/force-app/main/default/objects/Staging_Lead__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>其他</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>