code/force-app/main/default/objects/Staging_Lead__c/fields/Person_In_Charge__c.field-meta.xml
<CustomField>
    <fullName>Person_In_Charge__c</fullName>
    <label>負責人姓名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>