code/force-app/main/default/objects/Staging_Lead__c/fields/PI_Specialist__c.field-meta.xml
<CustomField>
    <fullName>PI_Specialist__c</fullName>
    <label>PI專投</label>
    <length>10</length>
    <type>Text</type>
</CustomField>