code/force-app/main/default/objects/Staging_Lead__c/fields/Reallocated__c.field-meta.xml
<CustomField>
    <fullName>Reallocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>已重分配</label>
    <type>Checkbox</type>
</CustomField>