code/force-app/main/default/objects/Staging_Lead__c/fields/Registration_Country__c.field-meta.xml
<CustomField>
    <fullName>Registration_Country__c</fullName>
    <label>註冊國別</label>
    <length>20</length>
    <type>Text</type>
</CustomField>