code/force-app/main/default/objects/Staging_Lead__c/fields/Rel_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Rel_Customer_Name__c</fullName>
    <label>企業關聯人姓名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>