code/force-app/main/default/objects/Staging_Lead__c/fields/Rel_Desc__c.field-meta.xml
<CustomField>
    <fullName>Rel_Desc__c</fullName>
    <label>企業關聯人職稱</label>
    <length>10</length>
    <type>Text</type>
</CustomField>