code/force-app/main/default/objects/Staging_Lead__c/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <label>行銷活動名稱</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>名單上傳</relationshipLabel>
    <relationshipName>SL_Related_Campaign</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>