code/force-app/main/default/objects/Staging_Lead__c/fields/Special_List_Order__c.field-meta.xml
<CustomField>
    <fullName>Special_List_Order__c</fullName>
    <label>特殊名單排序</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>