code/force-app/main/default/objects/Staging_Lead__c/fields/Suggest_Disp_Branch__c.field-meta.xml
<CustomField>
    <fullName>Suggest_Disp_Branch__c</fullName>
    <label>建議派發分行</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>