code/force-app/main/default/objects/Staging_Lead__c/fields/Total_Export_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Export_Value__c</fullName>
    <label>出口實績(資料擷取至某月)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>