code/force-app/main/default/objects/Staging_Lead__c/fields/Total_Import_Value_LY__c.field-meta.xml
<CustomField>
    <fullName>Total_Import_Value_LY__c</fullName>
    <label>進口實績(去年度)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>