code/force-app/main/default/objects/Staging_Lead__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(ISPICKVAL(Related_Campaign__r.Campaign_Type__c, &quot;Corporate Lead&quot;), &quot;企個名單&quot;, &quot;&quot;) &amp;
IF(ISPICKVAL(Related_Campaign__r.Campaign_Type__c, &quot;Prospect Lead&quot;), &quot;拓客名單&quot;, &quot;&quot;) &amp;
IF(ISPICKVAL(Related_Campaign__r.Campaign_Type__c, &quot;General Lead&quot;), &quot;一般名單&quot;, &quot;&quot;) &amp;
IF(ISPICKVAL(Related_Campaign__r.Campaign_Type__c, &quot;Oversea TMRAC Campaign&quot;), &quot;Oversea TMRAC Campaign&quot;, &quot;&quot;) &amp;
IF(ISPICKVAL(Related_Campaign__r.Campaign_Type__c, &quot;Oversea General Campaign&quot;), &quot;Oversea General Campaign&quot;, &quot;&quot;)</formula>
    <label>名單類別</label>
    <type>Text</type>
</CustomField>