code/force-app/main/default/objects/Staging_Lead__c/recordTypes/Domestic_Staging_Lead.recordType-meta.xml
<RecordType>
    <fullName>Domestic_Staging_Lead</fullName>
    <active>true</active>
    <label>國內名單上傳</label>
</RecordType>