code/force-app/main/default/objects/Staging_Lead__c/recordTypes/Oversea_Staging_Lead.recordType-meta.xml
<RecordType>
    <fullName>Oversea_Staging_Lead</fullName>
    <active>true</active>
    <label>Oversea Staging Lead</label>
</RecordType>