code/force-app/main/default/objects/Staging_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Dist_User__c</columns>
    <columns>Distribute_Division__c</columns>
    <columns>Invalid_Reason__c</columns>
    <columns>Lead_Invalid__c</columns>
    <columns>Customer_Segment__c</columns>
    <columns>Related_Campaign__c</columns>
    <columns>Reallocated__c</columns>
    <columns>Suggest_Disp_Branch__c</columns>
    <columns>Campaign_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>